--- a/index.html
+++ b/index.html
@@ -16,19 +16,20 @@
     </a-camera>
 
     <a-light
-      type="ambient"
-      intensity="0.5">
+      type="directional"
+      intensity="0.5"
+      position="10 5 10"
+      light="castShadow:true;">
     </a-light>
     
     <a-plane
       id="activationPlane"
-      color="red"
       width="10"
       height="10"
       position="0 0 -4"
       rotation="-90 0 0"
-      material="opacity: 1"
-      shadow="receive: true">
+      shadow="receive: true"
+      material="shader: shadow">
     </a-plane>
 
     <a-entity
@@ -36,7 +37,7 @@
       visible="false"
       scale="1 1 1"
       gltf-model="url(/Jenkins.gltf)"
-      shadow="cast: true">
+      shadow="receive: false">
     </a-entity>
 
     <a-sky
@@ -46,17 +47,14 @@
 
     <a-sphere
       id="metalSphere"
-      src="#skyTexture"
       position="0 2 -8"
       radius="1"
-      color="#fff"
-      metalness=".5"
-      roughness="1">
+      material="envMap: #skyTexture; metalness: 1; roughness: 0;">
     </a-sphere>
 
     <a-assets>
       <audio id="background-music" src="/resort.mp3"></audio>
-      <img id="skyTexture" src="https://live.staticflickr.com/65535/53753441825_aef18368aa_6k.jpg">
+      <img id="skyTexture" src="/sky_6k.jpg">
     </a-assets>
   </a-scene>
 
